; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/cd/extr_memory.c_PicoRead16_mcd_io.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/cd/extr_memory.c_PicoRead16_mcd_io.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EL_CDREGS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [33 x i8] c"m68k_regs r16: [%02x] %04x @%06x\00", align 1
@SekPc = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @PicoRead16_mcd_io(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = and i32 %5, 65280
  %7 = icmp eq i32 %6, 8192
  br i1 %7, label %8, label %18

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  %10 = call i32 @m68k_reg_read16(i32 %9)
  store i32 %10, i32* %4, align 4
  %11 = load i32, i32* @EL_CDREGS, align 4
  %12 = load i32, i32* %3, align 4
  %13 = and i32 %12, 63
  %14 = load i32, i32* %4, align 4
  %15 = load i32, i32* @SekPc, align 4
  %16 = call i32 @elprintf(i32 %11, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i32 %13, i32 %14, i32 %15)
  %17 = load i32, i32* %4, align 4
  store i32 %17, i32* %2, align 4
  br label %21

18:                                               ; preds = %1
  %19 = load i32, i32* %3, align 4
  %20 = call i32 @PicoRead16_io(i32 %19)
  store i32 %20, i32* %2, align 4
  br label %21

21:                                               ; preds = %18, %8
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local i32 @m68k_reg_read16(i32) #1

declare dso_local i32 @elprintf(i32, i8*, i32, i32, i32) #1

declare dso_local i32 @PicoRead16_io(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
